--- a/pkgs/development/mobile/xcodeenv/install.html.template
+++ b/pkgs/development/mobile/xcodeenv/install.html.template
@@ -3,9 +3,23 @@
 <html>
     <head>
         <title>Install IPA</title>
-        <meta http-equiv="refresh" content="1; url=@INSTALL_URL@">
     </head>
     
     <body>
+        <a id="forwardlink" href="@INSTALL_URL@">Go to the install page or wait a second</a>
+        
+        <script type="text/javascript">
+            setTimeout(function() {
+                var link = document.getElementById('forwardlink');
+                
+                if(document.createEvent) {
+                    var eventObj = document.createEvent('MouseEvents');
+                    eventObj.initEvent('click', true, false);
+                    link.dispatchEvent(eventObj);
+                } else if(document.createEventObject) {
+                    link.fireEvent('onclick');
+                }
+            }, 1000);
+        </script>
     </body>
 </html>
