--- a/pkgs/development/haskell-modules/configuration-hackage2nix.yaml
+++ b/pkgs/development/haskell-modules/configuration-hackage2nix.yaml
@@ -2586,6 +2586,7 @@ extra-packages:
   - mtl-prelude < 2                     # required for to build postgrest on mtl 2.1.x platforms
   - network == 2.6.3.1                  # newer versions don't compile with GHC 7.4.x and below
   - network == 3.0.*                    # required by network-bsd, HTTP, and many others (2019-04-30)
+  - ormolu == 0.0.5.0                   # required by haskell-language-server
   - pantry == 0.2.0.0                   # required by stack-2.1.3.1
   - parallel == 3.2.0.3                 # newer versions don't work with GHC 6.12.3
   - patience ^>= 0.1                    # required by chell-0.4.x
@@ -4988,7 +4989,6 @@ broken-packages:
   - flite
   - float-binstring
   - floating-bits
-  - floskell
   - flow-er
   - flow2dot
   - flowdock
@@ -7698,7 +7698,6 @@ broken-packages:
   - monad-atom
   - monad-atom-simple
   - monad-branch
-  - monad-dijkstra
   - monad-exception
   - monad-finally
   - monad-fork
