nixos-generate-config: use tera templates

--- a/nixos/modules/installer/tools/nixos-generate-config/Cargo.toml
+++ b/nixos/modules/installer/tools/nixos-generate-config/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2018"
 
 [dependencies]
 simple-error = "0.2"
+serde = { version = "1.0", features = ["derive"] }
+tera = { version = "1", default-features = false }
+lazy_static = "1"
 
 [[bin]]
 name = "nixos-generate-config"
