hackage2nix: update list of broken packages
@kiwi: please note that matterhorn & Unique are both broken

--- a/pkgs/development/haskell-modules/configuration-hackage2nix.yaml
+++ b/pkgs/development/haskell-modules/configuration-hackage2nix.yaml
@@ -3060,8 +3060,10 @@ broken-packages:
   - arb-fft
   - arbb-vm
   - arbor-datadog
+  - arbor-monad-counter
   - arbor-monad-metric
   - arbor-monad-metric-datadog
+  - arbor-postgres
   - arbtt
   - archive-libarchive
   - archive-tar-bytestring
@@ -3251,6 +3253,8 @@ broken-packages:
   - base-generics
   - base-io-access
   - base32-bytestring
+  - base62
+  - base64-bytes
   - base64-conduit
   - baserock-schema
   - basex-client
@@ -3326,6 +3330,7 @@ broken-packages:
   - binary-protocol-zmq
   - binary-search
   - binary-streams
+  - binary-tagged
   - binary-typed
   - bind-marshal
   - BinderAnn
@@ -3397,6 +3402,7 @@ broken-packages:
   - birch-beer
   - bird
   - BirdPP
+  - birds-of-paradise
   - bisect-binary
   - bit-array
   - bit-stream
@@ -3486,6 +3492,7 @@ broken-packages:
   - bot
   - botpp
   - bounded-array
+  - bowntz
   - box
   - braid
   - brain-bleep
@@ -3643,6 +3650,7 @@ broken-packages:
   - cao
   - cap
   - Capabilities
+  - capability
   - capnp
   - capped-list
   - capri
@@ -3978,6 +3986,7 @@ broken-packages:
   - confcrypt
   - conferer-hedis
   - conferer-provider-dhall
+  - conferer-provider-json
   - conferer-provider-yaml
   - conferer-snap
   - conffmt
@@ -4131,6 +4140,7 @@ broken-packages:
   - crypto-random-effect
   - crypto-rng
   - crypto-simple
+  - crypto-sodium
   - cryptocipher
   - cryptocompare
   - cryptoconditions
@@ -4262,6 +4272,7 @@ broken-packages:
   - datasets
   - DataTreeView
   - dataurl
+  - DataVersion
   - date-conversions
   - dates
   - datetime
@@ -4336,6 +4347,7 @@ broken-packages:
   - delude
   - demarcate
   - denominate
+  - dense
   - dense-int-set
   - dependent-hashmap
   - dependent-monoidal-map
@@ -4362,6 +4374,7 @@ broken-packages:
   - detour-via-uom
   - deunicode
   - devil
+  - devtools
   - dewdrop
   - dfinity-radix-tree
   - Dflow
@@ -4435,6 +4448,7 @@ broken-packages:
   - dirtree
   - discogs-haskell
   - discord-gateway
+  - discord-haskell
   - discord-hs
   - discord-rest
   - discord-types
@@ -4736,6 +4750,7 @@ broken-packages:
   - ethereum-client-haskell
   - ethereum-merkle-patricia-db
   - eths-rlp
+  - euler-tour-tree
   - euphoria
   - eurofxref
   - eve
@@ -5032,6 +5047,7 @@ broken-packages:
   - foscam-filename
   - foscam-sort
   - Foster
+  - fourmolu
   - fpco-api
   - fplll
   - fpnla-examples
@@ -5277,6 +5293,7 @@ broken-packages:
   - gi-gsttag
   - gi-gtkosxapplication
   - gi-handy
+  - gi-ibus
   - gi-poppler
   - gi-secret
   - gi-wnck
@@ -5332,6 +5349,7 @@ broken-packages:
   - glazier-react
   - glazier-react-examples
   - glazier-react-widget
+  - Gleam
   - GLFW
   - GLFW-b-demo
   - GLFW-OGL
@@ -5356,6 +5374,7 @@ broken-packages:
   - gloss-game
   - gloss-raster
   - gloss-sodium
+  - glpk-headers
   - glpk-hs
   - glue
   - GLUtil
@@ -5613,6 +5632,7 @@ broken-packages:
   - hannahci
   - hans
   - hans-pcap
+  - hanspell
   - haphviz
   - hapistrano
   - happindicator
@@ -5788,6 +5808,7 @@ broken-packages:
   - haskelldb-hsql-sqlite3
   - haskelldb-th
   - haskelldb-wx
+  - haskellish
   - HaskellLM
   - HaskellNet
   - HaskellNet-SSL
@@ -5812,6 +5833,7 @@ broken-packages:
   - haskoin-protocol
   - haskoin-script
   - haskoin-store
+  - haskoin-store-data
   - haskoin-util
   - haskoin-wallet
   - haskoon
@@ -5853,6 +5875,7 @@ broken-packages:
   - hasql-postgres-options
   - hasql-queue
   - hasql-simple
+  - hasql-th
   - hastache
   - hastache-aeson
   - haste
@@ -6192,6 +6215,7 @@ broken-packages:
   - hol
   - hold-em
   - hole
+  - holmes
   - Holumbus-Searchengine
   - holy-project
   - homeomorphic
@@ -6328,6 +6352,7 @@ broken-packages:
   - hsbencher
   - hsbencher-codespeed
   - hsbencher-fusion
+  - hsc3
   - hsc3-auditor
   - hsc3-cairo
   - hsc3-data
@@ -6377,6 +6402,7 @@ broken-packages:
   - hsI2C
   - hsignal
   - hSimpleDB
+  - hsinspect-lsp
   - HsJudy
   - hskeleton
   - hslackbuilder
@@ -6511,6 +6537,7 @@ broken-packages:
   - http2-client
   - http2-client-exe
   - http2-client-grpc
+  - http2-grpc-proto-lens
   - http2-grpc-proto3-wire
   - https-everywhere-rules
   - https-everywhere-rules-raw
@@ -6548,15 +6575,20 @@ broken-packages:
   - hvega-theme
   - hVOIDP
   - hw-all
+  - hw-balancedparens
   - hw-ci-assist
   - hw-dsv
+  - hw-eliasfano
   - hw-json
   - hw-json-lens
   - hw-json-simd
   - hw-json-simple-cursor
   - hw-json-standard-cursor
   - hw-kafka-avro
+  - hw-rankselect
   - hw-simd
+  - hw-succinct
+  - hw-xml
   - hwall-auth-iitk
   - hweblib
   - hwhile
@@ -6955,6 +6987,7 @@ broken-packages:
   - katydid
   - kawaii
   - kawhi
+  - kazura-queue
   - kd-tree
   - kdesrc-build-extra
   - keccak
@@ -7209,6 +7242,7 @@ broken-packages:
   - libraft
   - librandomorg
   - librato
+  - libsodium
   - libssh2
   - libssh2-conduit
   - libsystemd-daemon
@@ -7335,6 +7369,7 @@ broken-packages:
   - log-postgres
   - log-utils
   - log2json
+  - log4hs
   - logentries
   - logger
   - logging-effect-extra
@@ -7500,6 +7535,8 @@ broken-packages:
   - math-grads
   - math-interpolate
   - math-metric
+  - math-programming-glpk
+  - math-programming-tests
   - mathblog
   - mathflow
   - mathlink
@@ -7700,6 +7737,7 @@ broken-packages:
   - MonadCatchIO-transformers
   - MonadCatchIO-transformers-foreign
   - MonadCompose
+  - monadic-recursion-schemes
   - monadiccp
   - monadiccp-gecode
   - Monadius
@@ -7739,6 +7777,7 @@ broken-packages:
   - morfeusz
   - morley
   - morpheus-graphql-cli
+  - morpheus-graphql-client
   - morphisms-functors
   - morphisms-functors-inventory
   - morphisms-objects
@@ -7757,6 +7796,7 @@ broken-packages:
   - mpi-hs-cereal
   - mpi-hs-store
   - mpppc
+  - mprelude
   - mpretty
   - mpris
   - mprover
@@ -7875,6 +7915,7 @@ broken-packages:
   - n-tuple
   - n2o-protocols
   - n2o-web
+  - NaCl
   - nagios-plugin-ekg
   - nakadi-client
   - named-lock
@@ -8020,6 +8061,7 @@ broken-packages:
   - nofib-analyse
   - nofib-analyze
   - noise
+  - nom
   - Nomyx
   - Nomyx-Core
   - Nomyx-Language
@@ -8263,6 +8305,7 @@ broken-packages:
   - parallel-tasks
   - parallel-tree-search
   - parameterized
+  - parameterized-utils
   - paranoia
   - parco
   - parco-attoparsec
@@ -8335,6 +8378,7 @@ broken-packages:
   - pdf-toolbox-viewer
   - pdfname
   - pdfsplit
+  - pdftotext
   - pdynload
   - peakachu
   - PeanoWitnesses
@@ -8519,6 +8563,7 @@ broken-packages:
   - polydata-core
   - polynomial
   - polysemy-RandomFu
+  - polysemy-webserver
   - polysemy-zoo
   - polyseq
   - polytypeable
@@ -8532,6 +8577,7 @@ broken-packages:
   - pool-conduit
   - pop3-client
   - popenhs
+  - popkey
   - poppler
   - porcupine-core
   - porcupine-http
@@ -8560,6 +8606,7 @@ broken-packages:
   - postgresql-simple-queue
   - postgresql-simple-sop
   - postgresql-simple-typed
+  - postgresql-syntax
   - postgresql-typed
   - postgresql-typed-lifted
   - postgrest-ws
@@ -8641,6 +8688,7 @@ broken-packages:
   - process-qq
   - process-streaming
   - processing
+  - processmemory
   - procrastinating-variable
   - procstat
   - producer
@@ -8676,6 +8724,7 @@ broken-packages:
   - proteome
   - proto-lens-combinators
   - proto-lens-descriptors
+  - proto-lens-jsonpb
   - proto3-suite
   - protobuf-native
   - protocol-buffers
@@ -9296,6 +9345,7 @@ broken-packages:
   - Semantique
   - semdoc
   - semi-iso
+  - semialign-extras
   - semibounded-lattices
   - Semigroup
   - semigroupoids-syntax
@@ -9330,6 +9380,7 @@ broken-packages:
   - servant-auth-token-leveldb
   - servant-auth-token-persistent
   - servant-auth-token-rocksdb
+  - servant-avro
   - servant-client-namedargs
   - servant-csharp
   - servant-db
@@ -9412,6 +9463,7 @@ broken-packages:
   - sgrep
   - sh2md
   - sha-streams
+  - sha1
   - shade
   - shadower
   - shake-bindist
@@ -9533,6 +9585,7 @@ broken-packages:
   - skeletons
   - skell
   - skemmtun
+  - skews
   - skulk
   - skylark-client
   - skylighting-lucid
@@ -9545,11 +9598,13 @@ broken-packages:
   - slidemews
   - Slides
   - slim
+  - slip32
   - sloane
   - slot-lambda
   - sloth
   - slug
   - slynx
+  - small-bytearray-builder
   - smallarray
   - smallcheck-laws
   - smallcheck-lens
@@ -9580,6 +9635,7 @@ broken-packages:
   - SMTPClient
   - smtps-gmail
   - smuggler
+  - smuggler2
   - snake
   - snake-game
   - snap-accept
@@ -9798,6 +9854,7 @@ broken-packages:
   - state-record
   - stateful-mtl
   - stateWriter
+  - static
   - static-canvas
   - static-closure
   - static-tensor
@@ -9830,6 +9887,7 @@ broken-packages:
   - stm-hamt
   - stm-promise
   - stm-stats
+  - stm-supply
   - STM32-Zombie
   - stmcontrol
   - stochastic
@@ -9864,6 +9922,7 @@ broken-packages:
   - streamproc
   - strelka
   - strict-data
+  - strict-tuple-lens
   - StrictBench
   - StrictCheck
   - strictly
@@ -10024,6 +10083,7 @@ broken-packages:
   - tapioca
   - tar-bytestring
   - target
+  - tart
   - task
   - task-distribution
   - taskell
@@ -10036,6 +10096,8 @@ broken-packages:
   - tasty-jenkins-xml
   - tasty-laws
   - tasty-lens
+  - tasty-mgolden
+  - tasty-quickcheck-laws
   - tasty-stats
   - tateti-tateti
   - Taxonomy
@@ -10074,6 +10136,11 @@ broken-packages:
   - tempus
   - tensor
   - tensor-safe
+  - tensorflow
+  - tensorflow-core-ops
+  - tensorflow-logging
+  - tensorflow-opgen
+  - tensorflow-ops
   - termbox
   - termbox-banana
   - termbox-bindings
@@ -10206,6 +10273,7 @@ broken-packages:
   - timeseries
   - timespan
   - timeutils
+  - timezone-olson-th
   - timezone-unix
   - tintin
   - tiny-scheduler
@@ -10225,6 +10293,7 @@ broken-packages:
   - tldr
   - tls-extra
   - tlynx
+  - tmp-postgres
   - tn
   - to-haskell
   - to-string-class
@@ -10367,6 +10436,7 @@ broken-packages:
   - twilio
   - twill
   - twine
+  - twirp
   - twitter
   - twitter-conduit
   - twitter-enumerator
@@ -10544,6 +10614,7 @@ broken-packages:
   - uuagc-cabal
   - uuagc-diagrams
   - uuid-aeson
+  - uuid-bytes
   - uvector
   - uvector-algorithms
   - uxadt
@@ -10610,6 +10681,7 @@ broken-packages:
   - verifiable-expressions
   - verify
   - verilog
+  - verismith
   - versioning
   - versioning-servant
   - vflow-types
@@ -10829,6 +10901,7 @@ broken-packages:
   - wsdl
   - wsedit
   - wshterm
+  - wss-client
   - wstunnel
   - wtk
   - wtk-gtk
@@ -10909,6 +10982,7 @@ broken-packages:
   - xmonad-windownames
   - xmpipe
   - XMPP
+  - xor
   - xorshift-plus
   - Xorshift128Plus
   - xournal-builder
@@ -10916,6 +10990,7 @@ broken-packages:
   - xournal-parser
   - xournal-render
   - xournal-types
+  - xrefcheck
   - xsact
   - XSaiga
   - xsd
@@ -10963,6 +11038,8 @@ broken-packages:
   - yarr
   - yarr-image-io
   - yavie
+  - yaya-test
+  - yaya-unsafe-test
   - ycextra
   - yeamer
   - yeller
@@ -11096,6 +11173,7 @@ broken-packages:
   - zeromq4-conduit
   - zeromq4-patterns
   - zeroth
+  - zettelkast
   - ZFS
   - zifter
   - zifter-cabal
