hackage2nix: disable failing builds to fix evaluation on Hydra

--- a/pkgs/development/haskell-modules/configuration-hackage2nix.yaml
+++ b/pkgs/development/haskell-modules/configuration-hackage2nix.yaml
@@ -7561,6 +7561,7 @@ broken-packages:
   - libxml-enumerator
   - libxslt
   - lie
+  - lifetimes
   - lifted-base-tf
   - lifted-protolude
   - lifter
