haskellPackages: add myself as maintainer for a few pkgs
Some packages I maintain already and additionally some packages I have
experience with, so I should be able to help fixing stuff related to
them.

--- a/pkgs/development/haskell-modules/configuration-hackage2nix.yaml
+++ b/pkgs/development/haskell-modules/configuration-hackage2nix.yaml
@@ -2820,6 +2820,19 @@ package-maintainers:
     - finite-typelits
     - pulse-simple
     - simple-affine-space
+  sternenseemann:
+    # also maintain upstream package
+    - spacecookie
+    - gopher-proxy
+    # other packages I can help out for
+    - systemd
+    - fast-logger
+    - Euterpea2
+    - utc
+    - socket
+    - gitit
+    - yarn-lock
+    - yarn2nix
 
 unsupported-platforms:
   alsa-mixer:                                   [ x86_64-darwin ]
