haskellPackages: make poscat the maintainer for hinit

--- a/pkgs/development/haskell-modules/configuration-hackage2nix.yaml
+++ b/pkgs/development/haskell-modules/configuration-hackage2nix.yaml
@@ -2833,6 +2833,8 @@ package-maintainers:
     - gitit
     - yarn-lock
     - yarn2nix
+  poscat:
+    - hinit
 
 unsupported-platforms:
   alsa-mixer:                                   [ x86_64-darwin ]
