Add wfs-info tool to print free blocks (#15)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory(wfslib)
 
 add_subdirectory(wfs-extract)
 add_subdirectory(wfs-file-injector)
+add_subdirectory(wfs-info)
 if(NOT WIN32)
     add_subdirectory(wfs-fuse)
 endif()
