--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,12 +71,17 @@ jobs:
         name: wfs-fuse-${{matrix.release_name}}
         path: build/${{matrix.configure_preset}}/wfs-extract/Release
       if: matrix.platform != 'windows-latest'
+    - name: Upload wfs-info
+      uses: actions/upload-artifact@v2
+      with:
+        name: wfs-info-${{matrix.release_name}}
+        path: build/${{matrix.configure_preset}}/wfs-info/Release
 
     - name: Prepare Release Windows
-      run: powershell Compress-Archive -Path build\${{matrix.configure_preset}}\wfs-file-injector\Release\wfs-file-injector.exe, build\${{matrix.configure_preset}}\wfs-extract\Release\wfs-extract.exe -DestinationPath wfs-tools-${{github.ref_name}}-${{matrix.release_name}}.zip
+      run: powershell Compress-Archive -Path build\${{matrix.configure_preset}}\wfs-file-injector\Release\wfs-file-injector.exe, build\${{matrix.configure_preset}}\wfs-extract\Release\wfs-extract.exe, build\${{matrix.configure_preset}}\wfs-info\Release\wfs-info.exe -DestinationPath wfs-tools-${{github.ref_name}}-${{matrix.release_name}}.zip
       if: startsWith(github.ref, 'refs/tags/') && matrix.platform == 'windows-latest'
     - name: Prepare Release Linux
-      run: zip -r -j wfs-tools-${{github.ref_name}}-${{matrix.release_name}}.zip build/${{matrix.configure_preset}}/wfs-file-injector/Release/wfs-file-injector build/${{matrix.configure_preset}}/wfs-extract/Release/wfs-extract build/${{matrix.configure_preset}}/wfs-fuse/Release/wfs-fuse
+      run: zip -r -j wfs-tools-${{github.ref_name}}-${{matrix.release_name}}.zip build/${{matrix.configure_preset}}/wfs-file-injector/Release/wfs-file-injector build/${{matrix.configure_preset}}/wfs-extract/Release/wfs-extract build/${{matrix.configure_preset}}/wfs-fuse/Release/wfs-fuse build/${{matrix.configure_preset}}/wfs-extract/Release/wfs-info
       if: startsWith(github.ref, 'refs/tags/') && matrix.platform == 'ubuntu-latest'
 
     - name: Release
